--- a/templates/example/example/android/app/src/main/res/values/strings.xml
+++ b/templates/example/example/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name"><%= project.name %> Example</string>
+    <string name="app_name"><%- project.name %> Example</string>
 </resources>
